Alignment Corrections

--- a/resources/css/desktop.css
+++ b/resources/css/desktop.css
@@ -68,7 +68,7 @@
    height:auto;
    margin-top: 2rem;
    margin-left:1.5rem;
-   border:1px solid #647786;
+   border:4px solid #A1BB88;
    border-radius: 15px;
 
  }
@@ -81,7 +81,6 @@
 }
 
 .banner .banner-right-bar h1{
-  margin-top: 2rem;
   font-weight: bold;
   margin-left: 2.5rem;
   text-align: left;
@@ -158,11 +157,15 @@
 
 .information .info-main img {
    width:100%;
+   border: 4px solid  #A1BB88;
  }
 
  .information .information-right-bar{
    width:26.4rem;
  }
+ .information .information-mobile-bar{
+   display: none;
+}
 
  .information .information-right-bar .info{
    height:11.25rem;
@@ -176,28 +179,31 @@
    margin:1rem;
    width:9.25rem;
    height:9.25rem;
+   border:1.5px solid #7F7A8A;
+
  }
 
- .information .information-right-bar .info .info-text{
+ /*.information .information-right-bar .info */.info-text{
      width:100%;
-     margin:2rem;
+     height:auto;
+     margin:1rem;
  }
-  .information .information-right-bar .info .info-text h2{
+  /*.information .information-right-bar .info*/ .info-text h2{
     font-size: 1.5rem;
     font-weight: bold;
   }
-.information .information-right-bar .info  .info-text p{
+ /*.information .information-right-bar .info */ .info-text p{
     font-size: 1rem;
     margin:0.5rem auto;
   }
 
-.information .information-right-bar .info  .info-text span a{
+ /*.information .information-right-bar .info */ .info-text span a{
      color:#A1BB88;
      font-size:1.5rem;
      font-weight:bold;
   }
 
-  .information .information-right-bar .info .info-text span a:hover{
+ /*  .information .information-right-bar .info*/ .info-text span a:hover{
     color:#44375E;
   }
 
@@ -249,6 +255,8 @@
 
  .course img{
    width:100%;
+   border:1.5px solid #7F7A8A;
+
  }
 
  .course .course-text{
@@ -301,6 +309,8 @@
   }
 
  .thesis-sub{
+   width:100%;
+   height:auto;
    border:1px solid  #7F7A8A;
    margin-top: 1rem;
    margin-bottom: 1rem;
@@ -309,7 +319,7 @@
 }
 
  .thesis-text{
-   margin:2rem;
+   margin:1rem;
  }
  .thesis-text h3{
    font-weight:bold;
@@ -323,21 +333,24 @@
       text-align:left;
       margin-left:1rem;
     }
- .thesis-sub img{
+  .thesis-sub img{
   width:9.25rem;
+  height:9.25rem;
+  border:1.5px solid #7F7A8A;
 
 }
 
  .thesis-summary{
    margin-top: 1.5rem;
    margin-bottom: 2rem;
+   margin-left:1rem;
    width:60%;
 }
 
 .thesis-summary span{
    margin:1rem;
    font-weight:bold;
-   font-size:2rem;
+   font-size:1.25rem;
 }
 
  .thesis-summary p{
@@ -348,7 +361,7 @@
 
  /* Footer */
  .footer{
-  width:100%;
+  width:auto;
   height:auto;
   border-top: 2px solid lightgrey;
   display: flex;
