--- a/resources/css/mobile.css
+++ b/resources/css/mobile.css
@@ -1,4 +1,7 @@
  @media only screen and (max-width:1040px){
+   html{
+     padding:1rem;
+   }
 
 
   .header .mobile-logo-nav{
@@ -24,7 +27,10 @@
      display:block;
      width:100%;
    }
-   
+   .banner .banner-right-bar h1{
+     margin-top: 2rem;
+   }
+
    .information{
      height:auto;
      width:100%;
@@ -35,16 +41,20 @@
      width:90%;
         }
   .information   .information-right-bar{
-        width:90%;
+     display:none;
+      }
+      .information   .information-mobile-bar{
+        display:block;
       }
 
-  .information .information-right-bar .info{
+
+  .information .information-mobile-bar .info{
         display: block;
         width:100%;
         height:auto;
-        border: none;
       }
-    .information .information-right-bar  .info img{
+    .information .information-mobile-bar  .info img{
+
         width:90%;
 
       }
@@ -68,17 +78,20 @@
   .courses .mobile-course-items .mob-course{
         color:#A1bb88;
         display: block;
-        width:100%;
+        width:90%;
+        height: 3rem;
         background-color:#A89170;
-        font-weight:bold;
-        font-size:2rem;
-        height:4rem;
         margin:1rem;
+        vertical-align: middle;
 
       }
-  .courses .mobile-course-items .mob-course span{
-       text-align: center;
-        padding:  1rem;
+  .courses .mobile-course-items .mob-course p{
+
+      font-size:1rem;
+      font-weight:bold;
+      padding:1rem;
+      text-align: left;
+
       }
 
       .thesis{
@@ -87,7 +100,7 @@
       }
       .thesis .thesis-main{
         display: block;
-        width:100%;
+        width:90%;
       }
       .thesis-main video{
         width:90%;
@@ -95,11 +108,17 @@
       .thesis-summary{
         width:90%;
       }
+      .thesis-summary span{
+        font-size:1rem;
+      }
 
       .thesis .thesis-main .thesis-side-bar{
         display: none;
       }
-
+      .footer{
+        width:auto;
+        height:auto;
+      }
       .footer span{
         margin-top:1.5rem;
         padding-top: 1rem;
